--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,15 +39,14 @@ dependencies {
 
     // 뷰페이저
     implementation 'com.github.florent37:materialviewpager:1.2.3'
-
-
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
     implementation 'com.jpardogo.materialtabstrip:library:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.0.0'
 
-
+    // 버터나이프
     implementation 'com.jakewharton:butterknife:8.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
-    implementation 'com.github.ksoichiro:android-observablescrollview:1.5.0'
+
+    // 달력
     implementation 'com.borax12.materialdaterangepicker:library:2.0'
 }
