--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.accountbook">
+    package="com.professionalandroid.accountbook">
 
     <application
         android:allowBackup="true"
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppBaseTheme">
-        <activity android:name=".InsertDataView"
+        <activity android:name="com.professionalandroid.accountbook.InsertDataView"
             android:theme="@style/Theme.AppCompat"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.professionalandroid.accountbook.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
